--- a/Template/kontakt.html
+++ b/Template/kontakt.html
@@ -35,10 +35,10 @@
       <nav id="main-nav">
         <ul>
           <li><a class="active" href="#">Hjem</a></li>
-          <li><a href="#">Catering</a></li>
-          <li><a href="#">Kantine</a></li>
-          <li><a href="#">Om</a></li>
-          <li><a href="#">Kontakt</a></li>
+          <li><a href="catering.html">Catering</a></li>
+          <li><a href="kantine.html">Kantine</a></li>
+          <li><a href="om.html">Om</a></li>
+          <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav>
     </header>
@@ -49,18 +49,17 @@
         <div class="container">
           <div class="text-wrapper">
             <h2>Kontakt</h2>
-              <p id="introtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-              <!--TODO: remove space between number and mail-->
+              <p id="introtext">Ikke nøl med å ta kontakt for en uforpliktende samtale der vi ser om vi kan imøtekomme dine behov og preferanser. Vårt mål er å gjøre din sammenkomst til en minneverdig, og genuin smaksopplevelse med en latinsk signatur! </p>
               <div class="right">
                 <p class="phone">+47 428 83 247</p>
                 <p class="mailto">
-                  <a href="mailto:epost@epost.no">epost@epost.no</a>
+                  <a href="mailto:juanpequeno@gmail.com">juanpequeno@gmail.com</a>
                 </p>
               </div>
             </div>
             <div id="signature-wrapper">
-              <img id="signature" src="img/marlene.png" alt="">
-              <br><br><br><p>Hilsen Juan Carlos Pequeno</p>
+              <p>Hilsen Juan Carlos Pequeno</p>
+              <img id="signature" src="img/signature_carlos2.png" alt="">
             </div>
         </div>
       </section>
