Fylt inn tekst og bilder

--- a/Template/index.html
+++ b/Template/index.html
@@ -65,7 +65,8 @@
       <section class="intro">
         <div class="container">
           <h2>Velkommen</h2>
-          <p>We are a small group of professional chefs that take great pride in delivering delicious, savory food with inspiration from our home country. The chefs are born in Chile, Uruguay and Italy and we have brought our food traditions to Norway.
+          <p>Da Carlo består av Juan Carlos, Cesare og Roberto, tre erfarne kokker som tilsammen representerer matkultur fra det italienske, det spanske og det latinamerikanske kjøkkenet. Dette betyr at vi kan tilby rike smaksopplevelser tilberedt med de ypperste råvarer og med latinsk temperament.
+
           </p>
         </div>
       </section>
@@ -75,7 +76,8 @@
           <div class="box left">
             <div class="text-wrapper">
               <h3>Catering</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Vårt varemerke er personlig service og individuell tilpasning. Kokkene som gjør avtale med deg, er også de som lager maten og følger den helt frem til lokalet der maten presenteres for gjestene. På denne måten sikrer vi at dine ønsker og preferanser ivaretas på en god måte. Vi bruker kun råvarer av topp kvalitet og tilbereder dem på beste måte med vår erfaring fra det latinske kjøkkenet.
+              </p>
               <a href="#" class="button">Se vår cateringmeny</a>
             </div>
           </div>
@@ -98,7 +100,8 @@
           <div class="box left blue">
             <div class="text-wrapper">
               <h3>Kantine</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Hver bedrift har sine ulike behov og vi i Da Carlo er opptatt av et aktivt samarbeid for å finne frem til gode løsninger og skreddersy et konsept som kan imøtekomme akkurat deres ønsker og preferanser. Ta kontakt for nærmere informasjon. Vi er en samarbeidspartner du kan stole på.
+              </p>
               <a href="#" class="button">Se vår kantinemeny</a>
             </div>
           </div>
@@ -113,24 +116,16 @@
           <div class="box right">
             <div class="text-wrapper">
               <h3>Om oss</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>God mat gir en ekstra dimensjon til alle møter mellom mennesker, om det er i kantina på jobben, store høytidsdager eller uformelle firmafester.
+                Vi har samlet de beste smakene fra det italienske, spanske og latinamerikanske kjøkkenet og ønsker å tilby spennende og minneverdige smaksopplevelser tilpasset dere.
+              </p>
               <a href="#" class="button">Les mer om oss</a>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="row">
-        <div class="container">
-          <div class="box full dark">
-            <div class="text-wrapper">
-              <h3>Kontakt oss</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <a href="#" class="button">Send epost</a>
-            </div>
-          </div>
-        </div>
-      </section>
+      
     </main>
 
     <!-- call to action -->
