--- a/Template/kantine.html
+++ b/Template/kantine.html
@@ -29,8 +29,16 @@
           margin-top: -2rem;
         }
 
+        .container footer {
+          font-family: 'Lato', sans-serif;
+          font-size: .8rem;
+          line-height: 1;
+        }
+
+
+
         body {
-          background: fixed url('img/canteen.jpg') no-repeat;
+          background: fixed url('img/hero_catering.jpg') no-repeat;
           background-size: cover;
           margin: 0;
 
@@ -90,23 +98,20 @@
     <main>
       <section class="intro">
         <div class="container">
-          <div id="container-left"
+          <div id="text-wrapper">
             <h2>Kantine</h2>
-            <p>Vi tilbyr kantine quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+            <p id= "introtext">Hva har du lyst på til lunsj idag? Våre kokker har lang erfaring innen kantinedrift, matservering til møter og matservering ved ulike arrangement. Vår målsetning er å servere variert, sunn og delikat mat basert på gode råvarer. Vi ønsker i tillegg at den latinske matkulturen vi bærer med oss, kan sette preg på maten som serveres og ved å ha evnen til å improvisere vil vi kunne tilby et vidt spekter av retter.
+            </p>
+            <p>
+              Vi ønsker å tilby et variert og spennende mattilbud gjennom planlagte konsepter. I kantina skal gjestene innta et godt måltid og oppleve at vi tilstreber å dekke flest mulig smaksretninger og behov. Gode råvarer, fokus på ernæring og respekt for årstidens variasjon er i den sammenheng viktig. De bærende elementene i kantinedriften kan feks være salatbuffet, varmmat, brød buffet, påsmurt mat og i tillegg temadager.
+            </p>
+            <p>
+              Hver bedrift har sine ulike behov og vi i Da Carlo er opptatt av et aktivt samarbeid for å finne frem til gode løsninger og skreddersy et konsept som kan imøtekomme akkurat deres ønsker og preferanser. Ta kontakt for nærmere informasjon. Vi er en samarbeidspartner du kan stole på.
+
             </p>
           </div>
         </div>
-        <div id= "list-right">
 
-              <h5> Vi tilbyr </h5>
-              <ul>
-                <li>Lorum</li>
-                <li>Lorum</li>
-                <li>Lorum</li>
-                <li>Lorum</li>
-              </ul>
-
-        </div>
       </section>
 
       <!-- NOTE : FUNKER IKKE: boks på siden til høyre  -->
@@ -117,15 +122,20 @@
         <div class="container">
           <div class="box left">
             <div class="text-wrapper">
-              <h3>Kantinedrift for Nets strømmen</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+              <h3>Kantinedrift for Nets AS</h3>
+              <p>Jeg har vært så heldig å nyte godt av din matlaging gjennom mange år i jobbsammenheng, og det jeg savner mest ved å bytte arbeidssted er din "signatur" på maten.
+              Du holder høy standard, Carlos! Takk skal du ha.
+              </p>
+              <footer><br>
+                Kåre Gundersen <br>
+                Nets AS
+              </footer>
               <img id= "nets-logo" src="img/netts.png" alt="" height="30px" /></br>
               <a href="#" class="button">Se vår cateringmeny</a>
             </div>
           </div>
           <figure>
-            <img src="img/chef.jpg" alt="" />
+            <img src="img/lmh-kokker11.jpg" alt="" />
           </figure>
           <div class="box right tight blue">
             <div class="text-wrapper">
@@ -142,13 +152,16 @@
         <div class="container">
           <div class="box left dark">
             <div class="text-wrapper">
-              <h3>Kantinedrift for Nets Nydalen</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <h3>Kantinedrift for HVEM????</h3>
+              <p>Jeg kan trygt anbefale Carlos som kokk til både lunsj i kantina, julebord på jobben, til og med på en så stor dag som bryllup kan Carlos imponere og tilfredsstille dine krav og ønsker.
+                Du blir alltid møtt med et smil av en kokk med en inderlig arbeidsmoral og ønske å om gi kundene den beste opplevelsen. </p><br>
+                <footer>Eline Andresen</footer><br>
+
               <a href="#" class="button">Se vår kantinemeny</a>
             </div>
           </div>
           <figure>
-            <img src="img/chef.jpg" alt="" />
+            <img src="img/lmh-kokker12.jpg" alt="" />
           </figure>
         </div>
       </section>
